--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,16 +9,15 @@
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_alignParentTop="true"
-        tools:layout_height="300dp"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_height="300dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/video_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:layout_below="@id/video_view"
+        app:layout_constraintTop_toBottomOf="@id/video_view"
         />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
