--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,18 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <VideoView
-        android:id="@+id/video_view"
+    <SurfaceView
+        android:id="@+id/surface_view"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_height="300dp" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/video_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        app:layout_constraintTop_toBottomOf="@id/video_view"
+        app:layout_constraintTop_toBottomOf="@id/surface_view"
         />
 
     <ProgressBar
