--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -33,8 +33,8 @@
             android:layout_marginStart="16dp"
             android:lines="2"
             android:maxLines="2"
-            android:textSize="20sp"
-            android:breakStrategy="simple"
+            android:textSize="18sp"
+            android:breakStrategy="balanced"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/item_image"
@@ -42,7 +42,7 @@
             tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat" />
         
         <TextView
-            android:id="@+id/item_detail"
+            android:id="@+id/item_views"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -50,7 +50,20 @@
             app:layout_constraintLeft_toRightOf="@id/item_image"
             app:layout_constraintStart_toEndOf="@id/item_image"
             app:layout_constraintTop_toBottomOf="@id/item_title"
-            tools:text="Description text"
+            tools:text="50K views"
+            />
+
+        <TextView
+            android:id="@+id/item_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toRightOf="@id/item_image"
+            app:layout_constraintStart_toEndOf="@id/item_image"
+            app:layout_constraintTop_toBottomOf="@id/item_views"
+            tools:text="24 june 2022 "
+
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
