--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -6,9 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/card_view"
-    android:layout_margin="5dp"
-    app:cardBackgroundColor="@color/gray_600"
-    app:cardCornerRadius="12dp"
     app:contentPadding="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_height="90dp"
             tools:layout_width="120dp"
-            tools:src="@color/teal_200" />
+            tools:src="@color/light_blue_600" />
 
         <TextView
             android:id="@+id/item_title"
@@ -33,7 +30,8 @@
             android:layout_marginStart="16dp"
             android:lines="2"
             android:maxLines="2"
-            android:textSize="18sp"
+            android:textSize="14sp"
+            android:textStyle="bold"
             android:breakStrategy="balanced"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +44,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
             app:layout_constraintLeft_toRightOf="@id/item_image"
             app:layout_constraintStart_toEndOf="@id/item_image"
             app:layout_constraintTop_toBottomOf="@id/item_title"
@@ -58,7 +55,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
             app:layout_constraintLeft_toRightOf="@id/item_image"
             app:layout_constraintStart_toEndOf="@id/item_image"
             app:layout_constraintTop_toBottomOf="@id/item_views"
