--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -12,11 +12,19 @@
         android:layout_height="300dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/video_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/surface_view"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/video_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        app:layout_constraintTop_toBottomOf="@id/surface_view"
+        android:layout_height="400dp"
+        app:layout_constraintTop_toBottomOf="@id/video_title"
         />
 
     <ProgressBar
