--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -12,6 +12,16 @@
         android:layout_height="300dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <Button
+        android:id="@+id/accounts_button"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/surface_view"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Button"
+        />
+
+
     <TextView
         android:id="@+id/video_title"
         android:layout_width="match_parent"
