--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/surface_view"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="Button"
+        android:text="Log in"
         />
 
 
