--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -17,7 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:padding="5dp"
         app:layout_constraintTop_toBottomOf="@id/surface_view"
+        tools:text="This is video ggggggggg gfgfgfggggfgfgfg gfggfgfg"
         />
 
     <androidx.recyclerview.widget.RecyclerView
